[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "Real-world email triage OpenEnv environment"
requires-python = ">=3.11"
dependencies = [
    "openenv",
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "pydantic==2.6.0",
    "requests==2.31.0",
    "pyyaml==6.0.1",
]
